--- a/src/MenuPage.css
+++ b/src/MenuPage.css
@@ -1,27 +1,54 @@
-
-
 /* MenuPage.css */
 
 .pastries-container {
     display: grid;
     grid-template-columns: repeat(3, 1fr); /* Three equal columns */
     gap: 20px; /* Gap between grid items */
-    padding: 20px; /* Add padding for spacing */
+    padding: 30px; /* Add padding for spacing */
     text-align: center;
 }
 
 .pastry-item {
     border: 1px solid #ddd;
-    padding: 20px;
+    padding: 10px;
     text-align: center;
+    box-shadow: 0px 4px 8px -2px rgba(0, 0, 0, 0.9);
+    border-radius: 2rem;
+    transition: transform 0.2s ease-in-out; /* Add a smooth hover effect */
+}
+
+.pastry-item:hover {
+    transform: translateY(-5px); /* Lift the item on hover */
+    background-color: #ddd;
+}
+
+.pastry-price {
+    font-weight: 900;
+}
+
+.pastry-description {
+    color: black;
 }
 
 .pastry-image {
     max-width: 100%;
-    height: auto;
+    height: 70%;
     margin-bottom: 10px;
     width: 20rem;
     border-radius: 1rem;
+    
 }
 
-/* Add any additional styling as needed */
+/* Media query for responsiveness */
+@media screen and (max-width: 768px) {
+    .pastries-container {
+        grid-template-columns: repeat(auto-fill, minmax(180px, 1fr)); /* Adjust column size for smaller screens */
+    }
+}
+
+/* Media query for iPhone 12 Pro */
+@media screen and (max-width: 1170px) {
+    .pastries-container {
+        grid-template-columns: repeat(auto-fill, minmax(180px, 1fr)); /* Adjust column size for smaller screens */
+    }
+}
