--- a/src/MenuPage.css
+++ b/src/MenuPage.css
@@ -38,6 +38,18 @@
     border-radius: 1rem;
     
 }
+/* // Add to cart button  */
+.add-to-cart {
+    border-radius: 1rem;
+    background-color: black;
+    color: #ddd;
+    padding: 0.5rem;
+
+}
+.add-to-cart:hover {
+    background-color: silver;
+    color: black;
+}
 
 /* Media query for responsiveness */
 @media screen and (max-width: 768px) {
