--- a/src/HomePage.css
+++ b/src/HomePage.css
@@ -41,6 +41,18 @@ body {
     font-size: 20px;
     text-decoration: none;
 }
+.social-icon {
+    padding: 1rem;
+}
+.nav-menu {
+    padding: 1rem;
+}
+
+.social-icon:hover {
+    background-color: black;
+    color: white;
+    border-radius: 5rem;
+}
 
 .search-bar {
     display: flex;
@@ -71,7 +83,4 @@ h1{
     margin-top: -9.5rem; 
     font-weight: 600;
     font-size: 2.3rem;
-}
-.social-icon {
-    padding: 1rem;
 }
