--- a/src/MenuPage.css
+++ b/src/MenuPage.css
@@ -4,17 +4,23 @@
     display: grid;
     grid-template-columns: repeat(3, 1fr); /* Three equal columns */
     gap: 20px; /* Gap between grid items */
-    padding: 30px; /* Add padding for spacing */
+    padding: 25px; /* Add padding for spacing */
     text-align: center;
+    margin-left: 5rem;
+    margin-right: 4rem;
+   
 }
 
 .pastry-item {
     border: 1px solid #ddd;
-    padding: 10px;
+    padding: 5px;
     text-align: center;
     box-shadow: 0px 4px 8px -2px rgba(0, 0, 0, 0.9);
     border-radius: 2rem;
     transition: transform 0.2s ease-in-out; /* Add a smooth hover effect */
+    height: 100%;
+    width: 90%;
+    
 }
 
 .pastry-item:hover {
