--- a/src/MenuPage.css
+++ b/src/MenuPage.css
@@ -18,8 +18,8 @@
     box-shadow: 0px 4px 8px -2px rgba(0, 0, 0, 0.9);
     border-radius: 2rem;
     transition: transform 0.2s ease-in-out; /* Add a smooth hover effect */
-    height: 100%;
-    width: 90%;
+    height: 55%;
+    width: 85%;
     
 }
 
@@ -30,10 +30,12 @@
 
 .pastry-price {
     font-weight: 900;
+    margin-bottom: 3rem;
 }
 
 .pastry-description {
     color: black;
+   
 }
 
 .pastry-image {
